[package]
authors = ["Christian Visintin <christian.visintin1997@gmail.com>"]
categories = ["network-programming"]
description = "remotefs SSH client library"
documentation = "https://docs.rs/remotefs-ssh"
edition = "2021"
homepage = "https://veeso.github.io/remotefs-rs-ssh/"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
keywords = ["remotefs", "s3-client"]
license = "MIT"
name = "remotefs-ssh"
readme = "README.md"
repository = "https://github.com/veeso/remotefs-rs-ssh"
version = "0.1.2"

[dependencies]
chrono = "^0.4.19"
lazy_static = "^1.4.0"
log = "^0.4.14"
regex = "^1.5.0"
remotefs = "^0.2.0"
ssh2-config = "^0.1.3"
ssh2 = "^0.9.0"

[dev-dependencies]
env_logger = "^0.9.0"
pretty_assertions = "^1.0.0"
rand = "^0.8.4"
serial_test = "^0.9.0"
tempfile = "^3.2.0"

[features]
default = [ "find" ]
# misc
find = [ "remotefs/find" ]
no-log = [ "log/max_level_off" ]
ssh2-vendored = [ "ssh2/vendored-openssl" ]
# tests
github-actions = []
with-containers = [ ]

[target."cfg(target_os = \"windows\")"]
[target."cfg(target_os = \"windows\")".dependencies]
path-slash = "^0.2.1"

[target."cfg(target_family = \"unix\")"]
[target."cfg(target_family = \"unix\")".dependencies]
users = "^0.11.0"
