[package]
authors = ["Christian Visintin <christian.visintin@veeso.dev>"]
categories = ["network-programming"]
description = "remotefs SSH client library"
documentation = "https://docs.rs/remotefs-ssh"
edition = "2021"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
keywords = ["remotefs", "ssh-client", "scp-client", "sftp-client"]
license = "MIT"
name = "remotefs-ssh"
readme = "README.md"
repository = "https://github.com/remotefs-rs/remotefs-rs-ssh"
version = "0.4.1"

[dependencies]
chrono = "^0.4"
lazy-regex = "3"
log = "^0.4"
remotefs = "^0.3"
ssh2-config = "^0.2"
ssh2 = "^0.9"

[dev-dependencies]
env_logger = "^0.11"
pretty_assertions = "^1"
rand = "^0.8.4"
serial_test = "^3"
tempfile = "^3"

[features]
default = ["find"]
# misc
find = ["remotefs/find"]
no-log = ["log/max_level_off"]
ssh2-vendored = ["ssh2/vendored-openssl"]
# tests
github-actions = []
with-containers = []

[target."cfg(target_os = \"windows\")"]
[target."cfg(target_os = \"windows\")".dependencies]
path-slash = "^0.2.1"
